--- a/src/tick.module.css
+++ b/src/tick.module.css
@@ -1,6 +1,8 @@
 .pointer {
     position: absolute;
     transform: translate(-50%, -50%);
+    transition-duration: 0.3s;
+    transition-property: opacity;
 }
 
 .small {
