--- a/src/clock.module.css
+++ b/src/clock.module.css
@@ -1,8 +1,10 @@
 .container {
-    width: 600px;
-    height: 600px;
     background-color: #333;
     position: relative;
+    margin: 50px auto;
+    border-radius: 100%;
+    width: 80%;
+    padding-bottom: 80%;
 }
 .clockWise {
     position: absolute;
